--- a/pages/login/login.scss
+++ b/pages/login/login.scss
@@ -5,6 +5,9 @@
   width: 100%;
   height: 100%;
   background-color: #FFFFFF;
+  background-color: rgb(255, 255, 255);
+      padding: 10px 15px;
+      min-height: calc(100% - 45px);
 }
 .logo{
   display: flex;
@@ -17,11 +20,28 @@
     height: 160rpx;
   }
 }
-
+.boDnnU {
+    text-align: center;
+    padding: 20px 30px;
+}
+.boDnnU img {
+    max-width: 50%;
+}
+.hAXICq .label {
+    width: 24px;
+    height: 24px;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+.hAXICq .label img {
+    max-width: 80%;
+    max-height: 80%;
+}
 /* 填写 */
 .input-info{
-  padding: 0 6%;
-  padding-bottom: 40rpx;
   .info{
     display: flex;
     align-items:center;
@@ -30,10 +50,13 @@
     height: 100rpx;
     border-bottom: 2rpx solid #f6f6f6;
     input{
-      width: 70%;
-      height: 100%;
-      font-size: 26rpx;
-      color: #222222;
+      border: none;
+          line-height: 25px;
+          height: 25px;
+          padding: 0px 10px;
+          font-size: 16px;
+          width: 100%;
+		  font-weight: normal;
     }
     .more{
       display: flex;
@@ -60,6 +83,28 @@
   justify-content: center;
   width: 100%;
   height: 100rpx;
+  
+  .hoqqAL {
+      background-color: rgb(179, 141, 74);
+      background-image: linear-gradient(112deg, rgb(220, 190, 127) 0%, rgb(179, 141, 74) 100%);
+      border-radius: 4px;
+      font-family: PingFangSC-Semibold;
+      font-size: 16px;
+      color: rgb(255, 255, 255);
+      font-weight: 600;
+      border: none;
+      display: flex;
+      -webkit-box-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      align-items: center;
+      padding-left: 8px;
+      padding-right: 8px;
+      height: 44px;
+  }
+  .hoqqAL.new-button, .hoqqAL.new-button-large {
+      width: 100%;
+  }
   .btn{
     display: flex;
     align-items: center;
@@ -78,11 +123,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 6%;
   height: 80rpx;
   text{
-    font-size: 28rpx;
-    color: #555555;
+    font-size: 26rpx;
+    color: rgb(69, 157, 245);
   }
 }
 
