--- a/pages/register/register.scss
+++ b/pages/register/register.scss
@@ -5,6 +5,9 @@
   width: 100%;
   height: 100%;
   background-color: #FFFFFF;
+  background-color: rgb(255, 255, 255);
+      padding: 10px 15px;
+      min-height: calc(100% - 45px);
 }
 .logo{
   display: flex;
@@ -17,22 +20,97 @@
     height: 160rpx;
   }
 }
+
+.header-right {
+    position: fixed;
+    top: 20px;
+    margin-top: -15px;
+    right: 16px;
+    color: rgb(18, 18, 18);
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+	z-index: 9999;
+}
+.hoqqAL.new-button, .hoqqAL.new-button-small {
+    font-size: 14px;
+    font-weight: 400;
+    height: 30px;
+}
+.hoqqAL {
+    background-color: rgb(179, 141, 74);
+    background-image: linear-gradient(112deg, rgb(220, 190, 127) 0%, rgb(179, 141, 74) 100%);
+    border-radius: 4px;
+    font-family: PingFangSC-Semibold;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    border: none;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    padding-left: 8px;
+    padding-right: 8px;
+    height: 44px;
+}
+
+.boDnnU {
+    text-align: center;
+    padding: 20px 30px;
+}
+.boDnnU img {
+    max-width: 50%;
+}
+.label {
+    width: 24px;
+    height: 24px;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+.label img {
+    max-width: 80%;
+    max-height: 80%;
+}
+.eIZPEs {
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    padding: 10px 0px;
+}
+.kRcZiD {
+    color: rgb(142, 142, 147);
+    font-size: 12px;
+}
+.kRcZiD a {
+    color: rgb(69, 157, 245);
+}
 /* 填写 */
 .input-info{
-  padding: 0 6%;
   .info{
     display: flex;
     align-items:center;
     justify-content: space-between;
     width: 100%;
     height: 100rpx;
-    border-bottom: 2rpx solid #f6f6f6;
+    border-bottom: 1px solid rgb(232, 232, 232);
     input{
-      width: 90%;
-      height: 100%;
-      font-size: 26rpx;
-      color: #222222;
+      border: none;
+          line-height: 25px;
+          height: 25px;
+          padding: 0px 10px;
+          font-size: 16px;
+          width: 100%;
     }
+	.uni-input-placeholder{
+		color: #c7c7c7;
+	}
     .more{
       display: flex;
       align-items: center;
@@ -58,7 +136,27 @@
   justify-content: center;
   width: 100%;
   height: 100rpx;
-  margin-top: 40rpx;
+  .hoqqAL {
+      background-color: rgb(179, 141, 74);
+      background-image: linear-gradient(112deg, rgb(220, 190, 127) 0%, rgb(179, 141, 74) 100%);
+      border-radius: 4px;
+      font-family: PingFangSC-Semibold;
+      font-size: 16px;
+      color: rgb(255, 255, 255);
+      font-weight: 600;
+      border: none;
+      display: flex;
+      -webkit-box-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      align-items: center;
+      padding-left: 8px;
+      padding-right: 8px;
+      height: 44px;
+  }
+  .hoqqAL.new-button, .hoqqAL.new-button-large {
+      width: 100%;
+  }
   .btn{
     display: flex;
     align-items: center;
@@ -77,11 +175,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 6%;
   height: 80rpx;
   text{
     font-size: 28rpx;
     color: #555555;
+	color: rgb(69, 157, 245);
+	    font-size: 14px;
   }
 }
 
