--- a/pages/FlashSale/FlashSale.scss
+++ b/pages/FlashSale/FlashSale.scss
@@ -19,7 +19,8 @@
 	width: 100%;
 	//height: 100rpx;
 	//background:rgba(255,255,255,0);
-	background-color: #DE4A29;
+	background-color: #f4e4b7;
+	color:#000 !important;
 	/* #ifdef APP-PLUS||H5 */
 	height: calc(88rpx + var(--status-bar-height));
 	//padding-top: var(--status-bar-height);
@@ -55,15 +56,15 @@
 				display: flex;
 				width: 20rpx;
 				height: 20rpx;
-				border-left: 4rpx solid #FFFFFF;
-				border-bottom: 4rpx solid #FFFFFF;
+				border-left: 4rpx solid #000;
+				border-bottom: 4rpx solid #000;
 				transform: rotate(45deg);
 			}
 		}
 		.action{
 			background-color: transparent;
 			text{
-				border-color: #FFF;
+				border-color: #000;
 			}
 		}
 	}
@@ -96,7 +97,7 @@
 				line-height: normal;
 			}
 			text{
-				color: #FFF;
+				color: #000;
 				font-size: 26rpx;
 			}
 		}
@@ -199,7 +200,6 @@
 	padding-bottom: 20rpx;
 	margin: 20rpx;
 	border-radius: 10px;
-	height: 740rpx;
 }
 
 // 属性规格
@@ -603,7 +603,6 @@
 }
 /*持仓数据*/
 .position{
-	padding: 20rpx 0;
 	border-radius: 20rpx;
 	border-bottom: 2rpx solid #ddd;
 	background-color: #FFFFFF;
